--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home-container {
   position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0;
   height: 100vh;
-  background-image: url('images/toppage.jpg'); /* publicディレクトリに置くと楽 */
+  background-image: url('/toppage.jpg'); /* publicディレクトリに置くと楽 */
   background-size: cover;
   background-position: center;
   overflow: hidden;
